removed duplicate classes, using only from spec now